--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 24 11:05:54 EDT 2022
+#Thu Oct 12 12:21:17 IST 2023
 dropbox_key="gd5sputfo57s1l1"
+sdk.dir=C\:\\Users\\dell\\AppData\\Local\\Android\\Sdk
