--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,79 @@
 version: 2
-jobs:
-  build:
+
+workflows:
+  build-lint-test:
+    jobs:
+      - setup
+      - lint:
+          requires:
+            - setup
+          filters:
+            branches:
+              only:
+                - development
+                - /feature\/.*/
+                - /bug\/.*/
+      - test:
+          requires:
+            - setup
+          filters:
+            branches:
+              only:
+                - development
+                - /feature\/.*/
+                - /bug\/.*/
+
+executors:
+  android:
     working_directory: ~/code
     docker:
       - image: cimg/android:2024.01
     environment:
       JVM_OPTS: -Xmx3200m
+
+jobs:
+  setup:
+    executor: android
     steps:
       - checkout
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      #      - run:
-      #         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
-      #         command: sudo chmod +x ./gradlew
       - run:
-          name: Create local.properties
-          command: touch local.properties
+          name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
+          command: sudo chmod +x ./gradlew
       - run:
-          name: Add dummy api Key
-          command: echo "dropbox_key=\"foo\"" >> local.properties
+          name: Create user properties
+          command: mkdir $HOME/.gradle && touch $HOME/.gradle/gradle.properties
+      - run:
+          name: Add user properties
+          command: |
+            if [ ! -f $HOME/.gradle/gradle.properties ]; then
+              echo "oaDropboxKey=\"${OA_DROPBOX_KEY:-foo}\"" >> $HOME/.gradle/gradle.properties
+            else
+              cat $HOME/.gradle/gradle.properties
+            fi
       - save_cache:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+
+  test:
+    executor: android
+    steps:
       - run:
           name: Run Tests
-          command: ./gradlew lint test
+          command: ./gradlew test
+      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
+          path: app/build/test-results
+
+  lint:
+    executor: android
+    environment:
+      JVM_OPTS: -Xmx3200m
+    steps:
+      - run:
+          name: Run Tests
+          command: ./gradlew lint
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: app/build/reports
           destination: reports
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: app/build/test-results
-      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
