--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ executors:
     working_directory: ~/code
     docker:
       - image: cimg/android:2024.01
+    resource_class: medium
     environment:
       JVM_OPTS: -Xmx3200m
 
