--- a/build.gradle
+++ b/build.gradle
@@ -99,5 +99,5 @@ allprojects {
 }
 
 tasks.register('clean', Delete) {
-    delete rootProject.buildDir
+    delete rootProject.getLayout().getBuildDirectory()
 }
