--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,10 +15,10 @@ android {
 //    buildToolsVersion '34.0.0'
     defaultConfig {
         applicationId "net.opendasharchive.openarchive"
-        minSdkVersion 21
+        minSdkVersion 29
         targetSdkVersion 34
-        versionCode 20563
-        versionName '0.5.0'
+        versionCode 20569
+        versionName '0.7.2'
         archivesBaseName = "Save-$versionName"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
@@ -59,7 +59,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion "1.5.10"
+        kotlinCompilerExtensionVersion "1.5.13"
     }
 
     namespace 'net.opendasharchive.openarchive'
@@ -67,10 +67,10 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.22"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.23"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0"
 
-    implementation "androidx.core:core-ktx:1.12.0"
+//    implementation "androidx.core:core-ktx:1.13.1"
     implementation "androidx.appcompat:appcompat:1.6.1"
     implementation 'androidx.biometric:biometric:1.1.0'
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
@@ -79,13 +79,15 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
     implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation "androidx.work:work-runtime:2.9.0"
     implementation "androidx.work:work-runtime-ktx:2.9.0"
+    implementation "androidx.work:work-testing:2.9.0"
 
-    implementation "androidx.compose.ui:ui:1.6.5"
+    implementation "androidx.compose.ui:ui:1.6.7"
     implementation "androidx.compose.material3:material3:1.2.1"
-    implementation 'androidx.compose.foundation:foundation:1.6.5'
-    implementation "androidx.compose.ui:ui-tooling-preview:1.6.5"
-    implementation "androidx.activity:activity-compose:1.8.2"
+    implementation 'androidx.compose.foundation:foundation:1.6.7'
+    implementation "androidx.compose.ui:ui-tooling-preview:1.6.7"
+    implementation "androidx.activity:activity-compose:1.9.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0"
 
@@ -96,14 +98,13 @@ dependencies {
     implementation "com.github.satyan:sugar:1.5"
 
     implementation "com.google.code.gson:gson:2.10.1"
-    implementation "com.squareup.okhttp3:okhttp:4.11.0"
-    implementation "com.dropbox.core:dropbox-core-sdk:5.4.4"
+    implementation "com.squareup.okhttp3:okhttp:4.12.0"
 
     // adding web dav support: https://github.com/thegrizzlylabs/sardine-android'
     implementation "com.github.guardianproject:sardine-android:89f7eae512"
     
     implementation "com.google.android.material:material:1.11.0"
-    implementation "androidx.compose.material:material-icons-extended:1.6.5"
+    implementation "androidx.compose.material:material-icons-extended:1.6.7"
 
     implementation "com.github.bumptech.glide:glide:4.16.0"
     annotationProcessor "com.github.bumptech.glide:compiler:4.16.0"
@@ -148,24 +149,28 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    // google drive api
-    // Credential Manager (API 19 and higher)
-//    implementation "androidx.credentials:credentials:1.2.2"
-//    implementation "androidx.credentials:credentials-play-services-auth:1.2.2"
-//    implementation "com.google.android.libraries.identity.googleid:googleid:1.1.0"
-
-    implementation 'com.google.android.gms:play-services-auth:21.0.0'
+    // Google Drive API
+    implementation 'com.google.android.gms:play-services-auth:21.1.1'
     implementation 'com.google.http-client:google-http-client-gson:1.42.1'
-    implementation('com.google.api-client:google-api-client-android:1.26.0') {
-        exclude group: 'org.apache.httpcomponents'
-    }
-    implementation('com.google.apis:google-api-services-drive:v3-rev136-1.25.0') {
-        exclude group: 'org.apache.httpcomponents'
-    }
+    implementation 'com.google.api-client:google-api-client-android:1.26.0'
+    implementation 'com.google.apis:google-api-services-drive:v3-rev136-1.25.0'
 
     // Tor
-//    implementation 'info.guardianproject:tor-android:0.4.8.7'
-//    implementation 'info.guardianproject:jtorctl:0.4.5.7'
+    implementation 'info.guardianproject:tor-android:0.4.7.14'
+    implementation 'info.guardianproject:jtorctl:0.4.5.7'
+
+    // New Play libraries
+    implementation 'com.google.android.play:asset-delivery:2.2.2'
+    implementation 'com.google.android.play:asset-delivery-ktx:2.2.2'
+
+    implementation 'com.google.android.play:feature-delivery:2.1.0'
+    implementation 'com.google.android.play:feature-delivery-ktx:2.1.0'
+
+    implementation 'com.google.android.play:review:2.0.1'
+    implementation 'com.google.android.play:review-ktx:2.0.1'
+
+    implementation 'com.google.android.play:app-update:2.1.0'
+    implementation 'com.google.android.play:app-update-ktx:2.1.0'
 
     // Tests
     testImplementation 'junit:junit:4.13.2'
