--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0"
 
 //    implementation "androidx.core:core-ktx:1.13.1"
+    implementation "androidx.recyclerview:recyclerview:1.3.2"
     implementation "androidx.appcompat:appcompat:1.6.1"
     implementation "androidx.biometric:biometric:1.1.0"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
