--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar"
+        android:theme="@style/SaveAppTheme.NoActionBar"
         tools:ignore="UnusedAttribute,LockedOrientationActivity"
         tools:replace="android:icon,android:allowBackup">
         <!-- task affinity lets us define within which 'task' does a activity belong to.
@@ -64,14 +64,14 @@
             android:exported="false"
             android:label="@string/browse_existing"
             android:taskAffinity=""
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/SaveAppTheme.NoActionBar" />
 
         <activity
             android:name=".upload.UploadManagerActivity"
             android:exported="false"
             android:label="@string/title_activity_upload_manager"
             android:taskAffinity=""
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/SaveAppTheme.NoActionBar" />
 
         <activity
             android:name=".features.main.MainActivity"
@@ -117,6 +117,11 @@
             android:taskAffinity="" />
 
         <activity android:name=".services.gdrive.GDriveActivity" />
+
+        <activity
+            android:name=".features.settings.SpacesActivity"
+            android:exported="false"
+            android:label="@string/servers" />
 
         <activity
             android:name=".features.settings.FoldersActivity"
@@ -170,17 +175,17 @@
             android:name=".features.folders.CreateNewFolderActivity"
             android:label="@string/new_folder"
             android:taskAffinity=""
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/SaveAppTheme.NoActionBar" />
 
         <activity
             android:name=".features.folders.AddFolderActivity"
             android:taskAffinity=""
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/SaveAppTheme.NoActionBar" />
 
         <activity
             android:name=".features.settings.EditFolderActivity"
             android:taskAffinity=""
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/SaveAppTheme.NoActionBar" />
 
         <activity
             android:name=".features.settings.ConsentActivity"
