app-masking POC

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.RUN_USER_INITIATED_JOBS" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <queries>
@@ -65,11 +65,11 @@
             android:name=".features.main.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
 
             <!-- filter for sending text or images; accepts SEND action and audio/photo/video data -->
             <intent-filter>
@@ -93,11 +93,50 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="save+dweb" />
             </intent-filter>
         </activity>
+
+        <!-- Default alias: same icon & label as your normal launcher -->
+        <activity-alias
+            android:name="${applicationId}.alias.SaveAlias"
+            android:enabled="false"
+            android:exported="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:targetActivity=".features.main.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity-alias>
+
+        <!-- Example alias #1 (e.g. “Calculator” icon) -->
+        <activity-alias
+            android:name="${applicationId}.alias.MaskAlias"
+            android:enabled="true"
+            android:exported="true"
+            android:icon="@mipmap/ic_launcher_calculator"
+            android:label="@string/app_name_masked"
+            android:roundIcon="@mipmap/ic_launcher_calculator"
+            android:targetActivity=".features.main.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity-alias>
+
+        <activity
+            android:name=".features.settings.app_masking.AppMaskingActivity"
+            android:exported="false"
+            android:label="@string/label_app_masking"
+            android:taskAffinity=""
+            android:theme="@style/SaveAppTheme.NoActionBar" />
 
         <activity
             android:name=".features.folders.BrowseFoldersActivity"
@@ -277,9 +316,8 @@
 
         <service
             android:name=".services.snowbird.service.SnowbirdService"
-            android:foregroundServiceType="dataSync"
-            android:exported="false">
-        </service>
+            android:exported="false"
+            android:foregroundServiceType="dataSync"></service>
 
     </application>
 
