--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,11 +92,12 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.3.2"
     implementation "androidx.appcompat:appcompat:1.6.1"
     implementation "androidx.biometric:biometric:1.1.0"
+    implementation "androidx.security:security-crypto-ktx:1.1.0-alpha06"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.8.7"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7"
     implementation "androidx.preference:preference-ktx:1.2.1"
     implementation "androidx.work:work-runtime:2.9.0"
     implementation "androidx.work:work-runtime-ktx:2.9.0"
@@ -107,12 +108,12 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:1.6.7"
     implementation "androidx.compose.ui:ui-tooling-preview:1.6.7"
     implementation "androidx.activity:activity-compose:1.9.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.7"
 
-    implementation "io.insert-koin:koin-core:3.5.3"
-    implementation "io.insert-koin:koin-android:3.5.3"
-    implementation "io.insert-koin:koin-androidx-compose:3.5.3"
+    implementation "io.insert-koin:koin-core:4.0.2"
+    implementation "io.insert-koin:koin-android:4.0.2"
+    implementation "io.insert-koin:koin-androidx-compose:4.0.2"
 
     implementation "com.github.satyan:sugar:1.5"
 
