--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -218,7 +218,7 @@
             android:exported="false"
             android:noHistory="true"
             android:taskAffinity=""
-            android:theme="@style/SaveAppTheme.NoActionBar" />
+            android:theme="@style/SaveAppTheme.NoActionBar.Onboarding" />
 
         <activity
             android:name=".features.onboarding.Onboarding23InstructionsActivity"
