--- a/.github/workflows/detekt.yml
+++ b/.github/workflows/detekt.yml
@@ -48,7 +48,20 @@ jobs:
       run: |
         bundle exec fastlane detekt
 
-    # ✅ Step 6: Upload SARIF report for GitHub Security Code Scanning
+      # ✅ Debug Step: Check if SARIF Report Exists
+    - name: Debug - Check Detekt Report Location
+      run: |
+        echo "🔍 Checking SARIF report in app/build/reports/detekt/"
+        ls -la app/build/reports/detekt || echo "❌ Directory does not exist"
+        if [ -f app/build/reports/detekt/detekt.sarif ]; then
+          echo "✅ SARIF report found!"
+        else
+          echo "❌ SARIF report NOT found!"
+          exit 1
+        fi
+      
+
+      # ✅ Step 6: Upload SARIF report for GitHub Security Code Scanning
     - name: Upload SARIF report for GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v3
       with:
