fixes after first design review

--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,4 @@ fastlane/.env
 /app/release/baselineProfiles/0/save-unspecified-release.dm
 /app/release/baselineProfiles/1/save-unspecified-release.dm
 /app/release/output-metadata.json
-/.env
+/app/src/main/assets/.env
